# 8DAudioAndroid

./: .gitignore  build.gradle.kts  local.properties  settings.gradle.kts
.github/workflows/: build_apk.yml  build_magisk.yml
app/: build.gradle.kts  proguard-rules.pro
app/java/com/pirate/audio8d/: AudioCaptureManager.kt  AudioPlayerManager.kt  AudioProcessorService.kt  MainActivity.kt  MainViewModel.kt  NativeBridge.kt  PresetDataStore.kt  ShizukuHelper.kt
app/java/com/pirate/audio8d/ui/screens/: MainScreen.kt
app/java/com/pirate/audio8d/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_common.h  biquad.cpp  biquad.h  delay.cpp  delay.h  jni_bridge.cpp  native_processor.cpp  native_processor.h  orbit_panner.cpp  orbit_panner.h  reverb.cpp  reverb.h
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
magisk_module/: customize.sh  module.prop  zygisk_module.cpp
tools/: generate_test_tone.py
